syntax = "proto3";

package demopb;

option go_package = "/demopb;demopb";

service DemoService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}